<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/llRoot"
    android:background="@drawable/bg_white"
    android:paddingTop="5dp"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/actionHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:text="@string/home"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="1dp"
        android:layout_height="32dp"
        android:src="@drawable/divider_vertical" />

    <LinearLayout
        android:id="@+id/actionFavorite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_statistic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:text="@string/statistic"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="1dp"
        android:layout_height="32dp"
        android:src="@drawable/divider_vertical" />

    <LinearLayout
        android:id="@+id/actionRecent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_budget" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:text="@string/budget"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="1dp"
        android:layout_height="32dp"
        android:src="@drawable/divider_vertical" />

    <LinearLayout
        android:id="@+id/actionTools"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:text="@string/settings"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>
