<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto_bold"
            android:text="2025"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/bg_white"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/_10sdp"
        android:padding="@dimen/_10sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_balance"
                android:textColor="#8A95A8"
                android:gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:id="@+id/tv_total_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="$10,000"
                android:textColor="#000000"
                android:textSize="32sp"
                android:fontFamily="@font/roboto_bold"
                 />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="#E0E0E0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expense"
                        android:textColor="#49566A"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_expend_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$80,846"
                        android:textColor="#0F1624"
                        android:textSize="16sp"
                        android:fontFamily="@font/roboto_bold"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income"
                        android:textColor="#49566A"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_income_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$80,846"
                        android:textColor="#0F1624"
                        android:fontFamily="@font/roboto_bold"
                        android:textSize="16sp"
                         />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/_10sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border_top"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/month"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/expense"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/income"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/loan"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/borrow"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/balance"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_monthly_statistics"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/frAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_transaction_tabs">

        <include layout="@layout/ads_shimmer_native_home" />

    </FrameLayout>

</LinearLayout>